Update Exercise  2.html

--- a/Exercise  2.html
+++ b/Exercise  2.html
@@ -8,15 +8,15 @@
 
 <body>
 
-  <div id="Header">
-
+  <header>
+    <nav>
     <h1>My Sample Art Store</h1>
     <a href="#">Home</a> | <a href="#">Artists</a> | <a href="#">Artworks</a> | <a href="#">About Us</a> | <a href="#">Search</a><br/>
+    </nav>
+  </header>
 
-  </div>
-
-  <div id="Artwork">
-
+  <main>
+    <article>
     <h2>Mademoiselle Caroline Rivi&#232;re</h2>
 
     <p>by <a href="#">Jean-Auguste-Dominique Ingres</a></p>
@@ -42,9 +42,8 @@
      <img src="sharethis_16.png" title=sharethis alt=sharethis/>
     </p>
 
-  </div>
-
-  <div id="Related Paintings">
+    </article>
+ 
 
     <h2>Related Paintings</h2> <br/>
 
@@ -53,9 +52,6 @@
       <a href="300px-Whistlers_Mother_high_res copy.jpg"><img src="300px-Whistlers_Mother_high_res.jpg" title="Whistler's Mother" alt="Whistler's Mother" style="width:132px;height:132px"   /></a>
       <a href="related4_large.jpg"><img src="related4_small.jpg" title="Tired Man" alt="Tired Man"/></a>
 
-  </div>
-
-  <div id="Reviews">
 
     <h3>Reviews</h3>
 
@@ -76,12 +72,13 @@
       Quisque vitae ipsum qais nisus sagittis sollicitudin. Nam elementum ipsum malesuada mi sagittis hendrerit.
     </p>
 
-  </div>
+  </main>
+    
     <hr/>
-  <div id="Footer">
+  <footer>
     <a href="#">Home</a> | <a href="#">Artists</a> | <a href="#">Artworks</a> | <a href="#">About Us</a> | <a href="#">Search</a><br/>
     <em>Copyright &#169; 2013 My Sample Art Store</em>
-  </div>
+  </footer>
 
 </body>
 
