--- a/Exercise 1.html
+++ b/Exercise 1.html
@@ -32,7 +32,7 @@
     </ul>
   </nav>
 
-<article>
+<section>
     <h3>Jack  Smith</h3>
     <p>
     Address: 1 Microsoft Way<br/>
@@ -52,12 +52,12 @@
 
     <img src="images/jack-smith-map.png" title="Jack Smith Map" alt="Jack Smith Map"  /><br/>
     <figcaption><em>Map for Jack Smith</em></figcaption>
-  </article>
+  </section>
 
-  <aside>
+  <section>
       <h3>Last Contact Viewed</h3>
   		<p><a href="#">Camille Bernard</a><br/>University of Paris</p>
-  </aside>
+  </section>
 
 </main>
 
